--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "better-sqlite3": "^12.4.1",
+    "better-sqlite3": "^12.5.0",
     "next": "^16.0.3",
     "react": "^18",
     "react-dom": "^18",
     "slugify": "^1.6.6",
+    "sqlite3": "^5.1.7",
     "xss": "^1.0.15"
   },
   "devDependencies": {
