--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "better-sqlite3": "^12.5.0",
     "next": "^16.0.3",
+    "node": "^24.12.0",
     "react": "^18",
     "react-dom": "^18",
     "slugify": "^1.6.6",
